note on late submissions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-05-31 Tue 09:46 -->
+<!-- 2022-05-31 Tue 10:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Syllabus (FIN 302) Financial Management Principles</title>
@@ -44,31 +44,31 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0c12d73">1. Description</a>
+<li><a href="#org743a5a4">1. Description</a>
 <ul>
-<li><a href="#org4b47ad8">1.1. Overview</a></li>
-<li><a href="#orgce82013">1.2. Course Learning Outcomes &amp; Objectives</a></li>
+<li><a href="#orgf380034">1.1. Overview</a></li>
+<li><a href="#orgb80c30a">1.2. Course Learning Outcomes &amp; Objectives</a></li>
 </ul>
 </li>
-<li><a href="#org5287ae5">2. Exams</a></li>
-<li><a href="#org53d4f9f">3. Assignments</a></li>
-<li><a href="#org5abdee2">4. Attendance/Quizzes/Participation</a></li>
-<li><a href="#org2bfa191">5. Grading</a>
+<li><a href="#org9efe075">2. Exams</a></li>
+<li><a href="#orgbce6831">3. Assignments</a></li>
+<li><a href="#orgff267e6">4. Attendance/Quizzes/Participation</a></li>
+<li><a href="#orgd8973af">5. Grading</a>
 <ul>
-<li><a href="#org393756d">5.1. An Important Note on Grading</a></li>
+<li><a href="#org55e56c0">5.1. An Important Note on Grading</a></li>
 </ul>
 </li>
-<li><a href="#orgbbbbd9c">6. Tentative Outline by Week</a>
+<li><a href="#orgb4b4ce0">6. Tentative Outline by Week</a>
 <ul>
-<li><a href="#orga5097ca">6.1. Exam Due Dates</a></li>
-<li><a href="#orga3f7ab2">6.2. Assignment Due Dates</a></li>
+<li><a href="#org1d04645">6.1. Exam Due Dates</a></li>
+<li><a href="#org4cc4a4c">6.2. Assignment Due Dates</a></li>
 </ul>
 </li>
-<li><a href="#orga3b88f5">7. How To Ask Questions</a></li>
-<li><a href="#org48f295f">8. Email Communication</a></li>
-<li><a href="#org345eeec">9. Guidelines and Accommodations</a>
+<li><a href="#orga0fa310">7. How To Ask Questions</a></li>
+<li><a href="#org25fa0d3">8. Email Communication</a></li>
+<li><a href="#org44f4b7b">9. Guidelines and Accommodations</a>
 <ul>
-<li><a href="#org80d4578">9.1. Course Syllabus Disclosure Statement Fall 2021</a></li>
+<li><a href="#org3bd15dd">9.1. Course Syllabus Disclosure Statement Fall 2021</a></li>
 </ul>
 </li>
 </ul>
@@ -120,16 +120,16 @@ SCHOOL OF BUSINESS ADMINISTRATION
 <b><b>Lecture Notes</b></b>: <a href="https://financial-education.github.io/intro_corp_fin.html">Financial Education</a>
 </p>
 
-<div id="outline-container-org0c12d73" class="outline-2">
-<h2 id="org0c12d73"><span class="section-number-2">1.</span> Description</h2>
+<div id="outline-container-org743a5a4" class="outline-2">
+<h2 id="org743a5a4"><span class="section-number-2">1.</span> Description</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <b><b>Course Catalog Description</b></b>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)
 </p>
 </div>
 
-<div id="outline-container-org4b47ad8" class="outline-3">
-<h3 id="org4b47ad8"><span class="section-number-3">1.1.</span> Overview</h3>
+<div id="outline-container-orgf380034" class="outline-3">
+<h3 id="orgf380034"><span class="section-number-3">1.1.</span> Overview</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</li>
@@ -143,8 +143,8 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </div>
 </div>
 
-<div id="outline-container-orgce82013" class="outline-3">
-<h3 id="orgce82013"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
+<div id="outline-container-orgb80c30a" class="outline-3">
+<h3 id="orgb80c30a"><span class="section-number-3">1.2.</span> Course Learning Outcomes &amp; Objectives</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.
@@ -165,8 +165,8 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 </div>
 </div>
 
-<div id="outline-container-org5287ae5" class="outline-2">
-<h2 id="org5287ae5"><span class="section-number-2">2.</span> Exams</h2>
+<div id="outline-container-org9efe075" class="outline-2">
+<h2 id="org9efe075"><span class="section-number-2">2.</span> Exams</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 There will be two exams.  The exams will be multiple choice. Failure to complete an exam by the due date will result in a grade of 0.
@@ -174,8 +174,8 @@ There will be two exams.  The exams will be multiple choice. Failure to complete
 </div>
 </div>
 
-<div id="outline-container-org53d4f9f" class="outline-2">
-<h2 id="org53d4f9f"><span class="section-number-2">3.</span> Assignments</h2>
+<div id="outline-container-orgbce6831" class="outline-2">
+<h2 id="orgbce6831"><span class="section-number-2">3.</span> Assignments</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 There are 4 assignments under Content &gt; Assignments in BlackBoard.
@@ -183,8 +183,8 @@ There are 4 assignments under Content &gt; Assignments in BlackBoard.
 </div>
 </div>
 
-<div id="outline-container-org5abdee2" class="outline-2">
-<h2 id="org5abdee2"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
+<div id="outline-container-orgff267e6" class="outline-2">
+<h2 id="orgff267e6"><span class="section-number-2">4.</span> Attendance/Quizzes/Participation</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 There is no attendance/participation grade.
@@ -192,8 +192,8 @@ There is no attendance/participation grade.
 </div>
 </div>
 
-<div id="outline-container-org2bfa191" class="outline-2">
-<h2 id="org2bfa191"><span class="section-number-2">5.</span> Grading</h2>
+<div id="outline-container-orgd8973af" class="outline-2">
+<h2 id="orgd8973af"><span class="section-number-2">5.</span> Grading</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-center">
 <p>
@@ -271,8 +271,8 @@ There is no attendance/participation grade.
 </blockquote>
 </div>
 
-<div id="outline-container-org393756d" class="outline-3">
-<h3 id="org393756d"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
+<div id="outline-container-org55e56c0" class="outline-3">
+<h3 id="org55e56c0"><span class="section-number-3">5.1.</span> An Important Note on Grading</h3>
 <div class="outline-text-3" id="text-5-1">
 <blockquote>
 <p>
@@ -283,18 +283,22 @@ There is no special consideration if you need a certain grade in this course to 
 </div>
 </div>
 
-<div id="outline-container-orgbbbbd9c" class="outline-2">
-<h2 id="orgbbbbd9c"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
+<div id="outline-container-orgb4b4ce0" class="outline-2">
+<h2 id="orgb4b4ce0"><span class="section-number-2">6.</span> Tentative Outline by Week</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 We will cover chapters 1 through 14.  Since this course is asynchronous, you
 have a measure of flexibility regarding when you cover each chapter.  The due
 dates for the exams/assignments are listed below.
 </p>
+
+<p>
+<b><b>You will receive a 0 if you do not hand in an exam or assignment by the due date.  Because you have a month to complete the exams/assignments, I will not accept late submissions for any reason.</b></b>
+</p>
 </div>
 
-<div id="outline-container-orga5097ca" class="outline-3">
-<h3 id="orga5097ca"><span class="section-number-3">6.1.</span> Exam Due Dates</h3>
+<div id="outline-container-org1d04645" class="outline-3">
+<h3 id="org1d04645"><span class="section-number-3">6.1.</span> Exam Due Dates</h3>
 <div class="outline-text-3" id="text-6-1">
 <ul class="org-ul">
 <li>June 24: Exam 1 Due</li>
@@ -303,8 +307,8 @@ dates for the exams/assignments are listed below.
 </div>
 </div>
 
-<div id="outline-container-orga3f7ab2" class="outline-3">
-<h3 id="orga3f7ab2"><span class="section-number-3">6.2.</span> Assignment Due Dates</h3>
+<div id="outline-container-org4cc4a4c" class="outline-3">
+<h3 id="org4cc4a4c"><span class="section-number-3">6.2.</span> Assignment Due Dates</h3>
 <div class="outline-text-3" id="text-6-2">
 <ul class="org-ul">
 <li>June 24: DEF14A and Debt to Equity Ratio</li>
@@ -314,8 +318,8 @@ dates for the exams/assignments are listed below.
 </div>
 </div>
 
-<div id="outline-container-orga3b88f5" class="outline-2">
-<h2 id="orga3b88f5"><span class="section-number-2">7.</span> How To Ask Questions</h2>
+<div id="outline-container-orga0fa310" class="outline-2">
+<h2 id="orga0fa310"><span class="section-number-2">7.</span> How To Ask Questions</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 How to properly phrase a question is important in the workplace as well as in courses, such as ours, where much of the interaction is online.  Remember when formulating your question, <b>you get what you give</b>.  If you simply say, "I don't understand", then I have very little information to work with and so I can't help.  I'll just say to rewatch the relevant video.
@@ -331,8 +335,8 @@ Alternatively, if you say, "I calculated a stock's expected return using the CAP
 </div>
 </div>
 
-<div id="outline-container-org48f295f" class="outline-2">
-<h2 id="org48f295f"><span class="section-number-2">8.</span> Email Communication</h2>
+<div id="outline-container-org25fa0d3" class="outline-2">
+<h2 id="org25fa0d3"><span class="section-number-2">8.</span> Email Communication</h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Questions about course material should be posted to the most relevant discussion board.  Email should only be used for personal matters.  When sending an email, be sure to put the course in the subject line (FIN 302). 
@@ -340,16 +344,16 @@ Questions about course material should be posted to the most relevant discussion
 </div>
 </div>
 
-<div id="outline-container-org345eeec" class="outline-2">
-<h2 id="org345eeec"><span class="section-number-2">9.</span> Guidelines and Accommodations</h2>
+<div id="outline-container-org44f4b7b" class="outline-2">
+<h2 id="org44f4b7b"><span class="section-number-2">9.</span> Guidelines and Accommodations</h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at:  <a href="https://sunypoly.edu/pdf/student_handbook.pdf">https://sunypoly.edu/pdf/student_handbook.pdf</a> )
 </p>
 </div>
 
-<div id="outline-container-org80d4578" class="outline-3">
-<h3 id="org80d4578"><span class="section-number-3">9.1.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
+<div id="outline-container-org3bd15dd" class="outline-3">
+<h3 id="org3bd15dd"><span class="section-number-3">9.1.</span> Course Syllabus Disclosure Statement Fall 2021</h3>
 <div class="outline-text-3" id="text-9-1">
 <blockquote>
 <p>
@@ -382,7 +386,7 @@ NanoFab South
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Matthew Brigida, Ph.D.</p>
-<p class="date">Created: 2022-05-31 Tue 09:46</p>
+<p class="date">Created: 2022-05-31 Tue 10:07</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
